@@ -172,7 +172,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QPushButton" name="templateUseStandart">
+           <widget class="QPushButton" name="templateUseStandard">
             <property name="text">
              <string>Use standard template library</string>
             </property>
