@@ -271,6 +271,17 @@
       should not allow the name of any object to be blank.
     </p>
   </li>
+
+  <li>
+    <p>
+      fixed #1759 "Use default template library" button seems to do
+      nothing. This button should only be enabled if user switched to
+      their own library of template objects. The button should be
+      disabled if they switched back to the standard template library
+      or never switched to their own one.
+    </p>
+  </li>
+
 </ul>
 
 
