@@ -1,5 +1,11 @@
 2010-09-30  Vadim Kurland  <vadim@vk.crocodile.org>
 
+	* newFirewallDialog.cpp (browseTemplate): fixed #1759 "Use default
+	template library" button seems to do nothing. This button should
+	only be enabled if user switched to their own library of template
+	objects. The button should be disabled if they switched back to
+	the standard template library or never switched to their own one.
+
 	* newHostDialog.cpp (finishClicked): fixed #1761 "blank interface
 	name is possible in new host wizard"
 
